1.16 2021-01-2 Todd Rinaldo <toddr@cpan.org>
    * Switch to github for issue tracker.

2020-10-03 Todd Rinaldo <toddr@cpan.org> 1.15
    * Skip winsize test on Solaris and QNX NTO
    * Make function tests more robust
    * Work around a header name collission on util.h. This is breaking on recent OSX

2020-01-18 Todd Rinaldo <toddr@cpan.org> 1.14
    * Add strict/warnings to Tty.pm
	* Fix pod errors
	* Typo: s/dependend/dependent/
	* Prevent spurious warning from get_winsize()
	* Fix usage of setsid
	* Github actions testing. Windows is off of course.
	* Make README.md

2014-12-14 Todd Rinaldo <toddr@cpan.org> 1.13_01
	* RT 91590 - Remove MAP_TARGET from Makefile.PL
	* RT 88271 - Fix for Solaris setuid when root running as other user
	
2014-09-12 Todd Rinaldo <toddr@cpan.org> 1.12
	* Merge pull request from Chris Williams (bingos) to fix "redefinition of typedef" errors with v5.19.4 and above

2014-05-05 Todd Rinaldo <toddr@cpan.org>
	* Release 1.11 to CPAN with explicit dropping of support for Win32 (we never supported it) - RT 77813
	* Bump version to a devel release 1.11_01 for experimental work.
	* Fix typo in compilter - RT 75649
	* Add support for PERL_MM_OPT

2010-10-11   Todd Rinaldo <toddr@cpan.org>
	* CPAN testers clean. Bumping to release version 1.10

2010-10-04   Todd Rinaldo <toddr@cpan.org>
	* RT 60788 - Better error reporting on Operating Systems
	  that can't set a controlling terminal e.g. BeOS
	* Bump to 1.09_01

2010-10-04   Todd Rinaldo <toddr@cpan.org>
	* CPAN testers looks clean. Internal testing done on perl 5.6
	* Bump version to 1.09 and release to CPAN
	
2010-10-02   Todd Rinaldo <toddr@cpan.org>
	* RT 61642 - Fix file number test to work without hang on cygwin
	* Bump to 1.08_03

2010-09-10   Todd Rinaldo <toddr@cpan.org>
	* Update all versions to the new version. bump to 1.08_02

2010-09-10   Todd Rinaldo <toddr@cpan.org>
	* RT 45008 - only try TIOCSCTTY if we don't have a ctty
	* RT 53883 - IO::Tty detection on BeOS w/fix